--- a/play-react/app/views/main.scala.html
+++ b/play-react/app/views/main.scala.html
@@ -5,7 +5,7 @@
     <head>
         <title>@title</title>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
     </head>
     <body>
         @content
